// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render EditLog correctly with currentLog 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditLog
    currentLog={
        Object {
            "date": 86400000,
            "foods": Array [
              Object {
                "amount": 200,
                "calories": 205,
                "carbohydrates": 44,
                "createdAt": 0,
                "fat": 0.4,
                "id": "1",
                "name": "Rice (Jasmine)",
                "protein": 4.2,
                "timesUsed": 0,
                "unit": "grams",
              },
              Object {
                "amount": 100,
                "calories": 165,
                "carbohydrates": 0,
                "createdAt": 1000,
                "fat": 3.6,
                "id": "2",
                "name": "Chicken Breast",
                "protein": 31,
                "timesUsed": 1,
                "unit": "grams",
              },
              Object {
                "amount": 24,
                "calories": 163,
                "carbohydrates": 2.5,
                "createdAt": -1000,
                "fat": 14,
                "id": "3",
                "name": "Almonds",
                "protein": 6,
                "timesUsed": 2,
                "unit": "pieces",
              },
            ],
            "unit": "lb",
            "weight": 201,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row"
>
          <section
                    className="section__full-start-end"
          >
                    <Connect(Header)
                              history={
                                        Object {
                                                  "action": "POP",
                                                  "block": [Function],
                                                  "createHref": [Function],
                                                  "go": [Function],
                                                  "goBack": [Function],
                                                  "goForward": [Function],
                                                  "length": 1,
                                                  "listen": [Function],
                                                  "location": Object {
                                                    "hash": "",
                                                    "pathname": "/",
                                                    "search": "",
                                                    "state": undefined,
                                                  },
                                                  "push": [Function],
                                                  "replace": [Function],
                                                }
                              }
                    />
          </section>
          <section
                    className="section__center-start-end"
          >
                    <h1
                              className="heading-secondary center-text margin-bottom-small"
                    >
                              Edit Log
                    </h1>
          </section>
</div>,
        <div
          className="row"
>
          <section
                    className="section__center-start-end"
          >
                    <Connect(CurrentLogContainer)
                              history={
                                        Object {
                                                  "action": "POP",
                                                  "block": [Function],
                                                  "createHref": [Function],
                                                  "go": [Function],
                                                  "goBack": [Function],
                                                  "goForward": [Function],
                                                  "length": 1,
                                                  "listen": [Function],
                                                  "location": Object {
                                                    "hash": "",
                                                    "pathname": "/",
                                                    "search": "",
                                                    "state": undefined,
                                                  },
                                                  "push": [Function],
                                                  "replace": [Function],
                                                }
                              }
                    />
          </section>
          <section
                    className="section__center-start-end margin-bottom-large"
          >
                    <Connect(EditLogTabs) />
          </section>
</div>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <section
              className="section__full-start-end"
>
              <Connect(Header)
                            history={
                                          Object {
                                                        "action": "POP",
                                                        "block": [Function],
                                                        "createHref": [Function],
                                                        "go": [Function],
                                                        "goBack": [Function],
                                                        "goForward": [Function],
                                                        "length": 1,
                                                        "listen": [Function],
                                                        "location": Object {
                                                          "hash": "",
                                                          "pathname": "/",
                                                          "search": "",
                                                          "state": undefined,
                                                        },
                                                        "push": [Function],
                                                        "replace": [Function],
                                                      }
                            }
              />
</section>,
            <section
              className="section__center-start-end"
>
              <h1
                            className="heading-secondary center-text margin-bottom-small"
              >
                            Edit Log
              </h1>
</section>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Connect(Header)
                history={
                                Object {
                                                "action": "POP",
                                                "block": [Function],
                                                "createHref": [Function],
                                                "go": [Function],
                                                "goBack": [Function],
                                                "goForward": [Function],
                                                "length": 1,
                                                "listen": [Function],
                                                "location": Object {
                                                  "hash": "",
                                                  "pathname": "/",
                                                  "search": "",
                                                  "state": undefined,
                                                },
                                                "push": [Function],
                                                "replace": [Function],
                                              }
                }
/>,
              "className": "section__full-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "history": Object {
                  "action": "POP",
                  "block": [Function],
                  "createHref": [Function],
                  "go": [Function],
                  "goBack": [Function],
                  "goForward": [Function],
                  "length": 1,
                  "listen": [Function],
                  "location": Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                  "push": [Function],
                  "replace": [Function],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1
                className="heading-secondary center-text margin-bottom-small"
>
                Edit Log
</h1>,
              "className": "section__center-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Edit Log",
                "className": "heading-secondary center-text margin-bottom-small",
              },
              "ref": null,
              "rendered": "Edit Log",
              "type": "h1",
            },
            "type": "section",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <section
              className="section__center-start-end"
>
              <Connect(CurrentLogContainer)
                            history={
                                          Object {
                                                        "action": "POP",
                                                        "block": [Function],
                                                        "createHref": [Function],
                                                        "go": [Function],
                                                        "goBack": [Function],
                                                        "goForward": [Function],
                                                        "length": 1,
                                                        "listen": [Function],
                                                        "location": Object {
                                                          "hash": "",
                                                          "pathname": "/",
                                                          "search": "",
                                                          "state": undefined,
                                                        },
                                                        "push": [Function],
                                                        "replace": [Function],
                                                      }
                            }
              />
</section>,
            <section
              className="section__center-start-end margin-bottom-large"
>
              <Connect(EditLogTabs) />
</section>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Connect(CurrentLogContainer)
                history={
                                Object {
                                                "action": "POP",
                                                "block": [Function],
                                                "createHref": [Function],
                                                "go": [Function],
                                                "goBack": [Function],
                                                "goForward": [Function],
                                                "length": 1,
                                                "listen": [Function],
                                                "location": Object {
                                                  "hash": "",
                                                  "pathname": "/",
                                                  "search": "",
                                                  "state": undefined,
                                                },
                                                "push": [Function],
                                                "replace": [Function],
                                              }
                }
/>,
              "className": "section__center-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "history": Object {
                  "action": "POP",
                  "block": [Function],
                  "createHref": [Function],
                  "go": [Function],
                  "goBack": [Function],
                  "goForward": [Function],
                  "length": 1,
                  "listen": [Function],
                  "location": Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                  "push": [Function],
                  "replace": [Function],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Connect(EditLogTabs) />,
              "className": "section__center-start-end margin-bottom-large",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "section",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row"
>
            <section
                        className="section__full-start-end"
            >
                        <Connect(Header)
                                    history={
                                                Object {
                                                            "action": "POP",
                                                            "block": [Function],
                                                            "createHref": [Function],
                                                            "go": [Function],
                                                            "goBack": [Function],
                                                            "goForward": [Function],
                                                            "length": 1,
                                                            "listen": [Function],
                                                            "location": Object {
                                                              "hash": "",
                                                              "pathname": "/",
                                                              "search": "",
                                                              "state": undefined,
                                                            },
                                                            "push": [Function],
                                                            "replace": [Function],
                                                          }
                                    }
                        />
            </section>
            <section
                        className="section__center-start-end"
            >
                        <h1
                                    className="heading-secondary center-text margin-bottom-small"
                        >
                                    Edit Log
                        </h1>
            </section>
</div>,
          <div
            className="row"
>
            <section
                        className="section__center-start-end"
            >
                        <Connect(CurrentLogContainer)
                                    history={
                                                Object {
                                                            "action": "POP",
                                                            "block": [Function],
                                                            "createHref": [Function],
                                                            "go": [Function],
                                                            "goBack": [Function],
                                                            "goForward": [Function],
                                                            "length": 1,
                                                            "listen": [Function],
                                                            "location": Object {
                                                              "hash": "",
                                                              "pathname": "/",
                                                              "search": "",
                                                              "state": undefined,
                                                            },
                                                            "push": [Function],
                                                            "replace": [Function],
                                                          }
                                    }
                        />
            </section>
            <section
                        className="section__center-start-end margin-bottom-large"
            >
                        <Connect(EditLogTabs) />
            </section>
</div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <section
                className="section__full-start-end"
>
                <Connect(Header)
                                history={
                                                Object {
                                                                "action": "POP",
                                                                "block": [Function],
                                                                "createHref": [Function],
                                                                "go": [Function],
                                                                "goBack": [Function],
                                                                "goForward": [Function],
                                                                "length": 1,
                                                                "listen": [Function],
                                                                "location": Object {
                                                                  "hash": "",
                                                                  "pathname": "/",
                                                                  "search": "",
                                                                  "state": undefined,
                                                                },
                                                                "push": [Function],
                                                                "replace": [Function],
                                                              }
                                }
                />
</section>,
              <section
                className="section__center-start-end"
>
                <h1
                                className="heading-secondary center-text margin-bottom-small"
                >
                                Edit Log
                </h1>
</section>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Connect(Header)
                  history={
                                    Object {
                                                      "action": "POP",
                                                      "block": [Function],
                                                      "createHref": [Function],
                                                      "go": [Function],
                                                      "goBack": [Function],
                                                      "goForward": [Function],
                                                      "length": 1,
                                                      "listen": [Function],
                                                      "location": Object {
                                                        "hash": "",
                                                        "pathname": "/",
                                                        "search": "",
                                                        "state": undefined,
                                                      },
                                                      "push": [Function],
                                                      "replace": [Function],
                                                    }
                  }
/>,
                "className": "section__full-start-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "history": Object {
                    "action": "POP",
                    "block": [Function],
                    "createHref": [Function],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h1
                  className="heading-secondary center-text margin-bottom-small"
>
                  Edit Log
</h1>,
                "className": "section__center-start-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Log",
                  "className": "heading-secondary center-text margin-bottom-small",
                },
                "ref": null,
                "rendered": "Edit Log",
                "type": "h1",
              },
              "type": "section",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <section
                className="section__center-start-end"
>
                <Connect(CurrentLogContainer)
                                history={
                                                Object {
                                                                "action": "POP",
                                                                "block": [Function],
                                                                "createHref": [Function],
                                                                "go": [Function],
                                                                "goBack": [Function],
                                                                "goForward": [Function],
                                                                "length": 1,
                                                                "listen": [Function],
                                                                "location": Object {
                                                                  "hash": "",
                                                                  "pathname": "/",
                                                                  "search": "",
                                                                  "state": undefined,
                                                                },
                                                                "push": [Function],
                                                                "replace": [Function],
                                                              }
                                }
                />
</section>,
              <section
                className="section__center-start-end margin-bottom-large"
>
                <Connect(EditLogTabs) />
</section>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Connect(CurrentLogContainer)
                  history={
                                    Object {
                                                      "action": "POP",
                                                      "block": [Function],
                                                      "createHref": [Function],
                                                      "go": [Function],
                                                      "goBack": [Function],
                                                      "goForward": [Function],
                                                      "length": 1,
                                                      "listen": [Function],
                                                      "location": Object {
                                                        "hash": "",
                                                        "pathname": "/",
                                                        "search": "",
                                                        "state": undefined,
                                                      },
                                                      "push": [Function],
                                                      "replace": [Function],
                                                    }
                  }
/>,
                "className": "section__center-start-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "history": Object {
                    "action": "POP",
                    "block": [Function],
                    "createHref": [Function],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Connect(EditLogTabs) />,
                "className": "section__center-start-end margin-bottom-large",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "section",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render EditLog correctly with empty currentLog 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditLog
    currentLog={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row"
>
          <section
                    className="section__full-start-end"
          >
                    <Connect(Header)
                              history={
                                        Object {
                                                  "action": "POP",
                                                  "block": [Function],
                                                  "createHref": [Function],
                                                  "go": [Function],
                                                  "goBack": [Function],
                                                  "goForward": [Function],
                                                  "length": 1,
                                                  "listen": [Function],
                                                  "location": Object {
                                                    "hash": "",
                                                    "pathname": "/",
                                                    "search": "",
                                                    "state": undefined,
                                                  },
                                                  "push": [Function],
                                                  "replace": [Function],
                                                }
                              }
                    />
          </section>
          <section
                    className="section__center-start-end"
          >
                    <h1
                              className="heading-secondary center-text margin-bottom-small"
                    >
                              Edit Log
                    </h1>
          </section>
</div>,
        <div
          className="row"
>
          <section
                    className="section__center-start-end"
          >
                    <p
                              className="heading-tertiary center-text margin-bottom-small"
                    >
                              Select a Log from Log dashboard to edit
                    </p>
          </section>
</div>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <section
              className="section__full-start-end"
>
              <Connect(Header)
                            history={
                                          Object {
                                                        "action": "POP",
                                                        "block": [Function],
                                                        "createHref": [Function],
                                                        "go": [Function],
                                                        "goBack": [Function],
                                                        "goForward": [Function],
                                                        "length": 1,
                                                        "listen": [Function],
                                                        "location": Object {
                                                          "hash": "",
                                                          "pathname": "/",
                                                          "search": "",
                                                          "state": undefined,
                                                        },
                                                        "push": [Function],
                                                        "replace": [Function],
                                                      }
                            }
              />
</section>,
            <section
              className="section__center-start-end"
>
              <h1
                            className="heading-secondary center-text margin-bottom-small"
              >
                            Edit Log
              </h1>
</section>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Connect(Header)
                history={
                                Object {
                                                "action": "POP",
                                                "block": [Function],
                                                "createHref": [Function],
                                                "go": [Function],
                                                "goBack": [Function],
                                                "goForward": [Function],
                                                "length": 1,
                                                "listen": [Function],
                                                "location": Object {
                                                  "hash": "",
                                                  "pathname": "/",
                                                  "search": "",
                                                  "state": undefined,
                                                },
                                                "push": [Function],
                                                "replace": [Function],
                                              }
                }
/>,
              "className": "section__full-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "history": Object {
                  "action": "POP",
                  "block": [Function],
                  "createHref": [Function],
                  "go": [Function],
                  "goBack": [Function],
                  "goForward": [Function],
                  "length": 1,
                  "listen": [Function],
                  "location": Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                  "push": [Function],
                  "replace": [Function],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1
                className="heading-secondary center-text margin-bottom-small"
>
                Edit Log
</h1>,
              "className": "section__center-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Edit Log",
                "className": "heading-secondary center-text margin-bottom-small",
              },
              "ref": null,
              "rendered": "Edit Log",
              "type": "h1",
            },
            "type": "section",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <section
            className="section__center-start-end"
>
            <p
                        className="heading-tertiary center-text margin-bottom-small"
            >
                        Select a Log from Log dashboard to edit
            </p>
</section>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p
              className="heading-tertiary center-text margin-bottom-small"
>
              Select a Log from Log dashboard to edit
</p>,
            "className": "section__center-start-end",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Select a Log from Log dashboard to edit",
              "className": "heading-tertiary center-text margin-bottom-small",
            },
            "ref": null,
            "rendered": "Select a Log from Log dashboard to edit",
            "type": "p",
          },
          "type": "section",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row"
>
            <section
                        className="section__full-start-end"
            >
                        <Connect(Header)
                                    history={
                                                Object {
                                                            "action": "POP",
                                                            "block": [Function],
                                                            "createHref": [Function],
                                                            "go": [Function],
                                                            "goBack": [Function],
                                                            "goForward": [Function],
                                                            "length": 1,
                                                            "listen": [Function],
                                                            "location": Object {
                                                              "hash": "",
                                                              "pathname": "/",
                                                              "search": "",
                                                              "state": undefined,
                                                            },
                                                            "push": [Function],
                                                            "replace": [Function],
                                                          }
                                    }
                        />
            </section>
            <section
                        className="section__center-start-end"
            >
                        <h1
                                    className="heading-secondary center-text margin-bottom-small"
                        >
                                    Edit Log
                        </h1>
            </section>
</div>,
          <div
            className="row"
>
            <section
                        className="section__center-start-end"
            >
                        <p
                                    className="heading-tertiary center-text margin-bottom-small"
                        >
                                    Select a Log from Log dashboard to edit
                        </p>
            </section>
</div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <section
                className="section__full-start-end"
>
                <Connect(Header)
                                history={
                                                Object {
                                                                "action": "POP",
                                                                "block": [Function],
                                                                "createHref": [Function],
                                                                "go": [Function],
                                                                "goBack": [Function],
                                                                "goForward": [Function],
                                                                "length": 1,
                                                                "listen": [Function],
                                                                "location": Object {
                                                                  "hash": "",
                                                                  "pathname": "/",
                                                                  "search": "",
                                                                  "state": undefined,
                                                                },
                                                                "push": [Function],
                                                                "replace": [Function],
                                                              }
                                }
                />
</section>,
              <section
                className="section__center-start-end"
>
                <h1
                                className="heading-secondary center-text margin-bottom-small"
                >
                                Edit Log
                </h1>
</section>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Connect(Header)
                  history={
                                    Object {
                                                      "action": "POP",
                                                      "block": [Function],
                                                      "createHref": [Function],
                                                      "go": [Function],
                                                      "goBack": [Function],
                                                      "goForward": [Function],
                                                      "length": 1,
                                                      "listen": [Function],
                                                      "location": Object {
                                                        "hash": "",
                                                        "pathname": "/",
                                                        "search": "",
                                                        "state": undefined,
                                                      },
                                                      "push": [Function],
                                                      "replace": [Function],
                                                    }
                  }
/>,
                "className": "section__full-start-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "history": Object {
                    "action": "POP",
                    "block": [Function],
                    "createHref": [Function],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h1
                  className="heading-secondary center-text margin-bottom-small"
>
                  Edit Log
</h1>,
                "className": "section__center-start-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Log",
                  "className": "heading-secondary center-text margin-bottom-small",
                },
                "ref": null,
                "rendered": "Edit Log",
                "type": "h1",
              },
              "type": "section",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <section
              className="section__center-start-end"
>
              <p
                            className="heading-tertiary center-text margin-bottom-small"
              >
                            Select a Log from Log dashboard to edit
              </p>
</section>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="heading-tertiary center-text margin-bottom-small"
>
                Select a Log from Log dashboard to edit
</p>,
              "className": "section__center-start-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Select a Log from Log dashboard to edit",
                "className": "heading-tertiary center-text margin-bottom-small",
              },
              "ref": null,
              "rendered": "Select a Log from Log dashboard to edit",
              "type": "p",
            },
            "type": "section",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
